<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemIdOpciones"
        android:orderInCategory="100"
        android:title="@string/itemOpciones"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/itemIdInicio"
                android:title="@string/itemInicio" />
            <item
                android:id="@+id/itemIdAcceso"
                android:title="@string/itemAcceso" />
            <item
                android:id="@+id/itemIdContacto"
                android:title="@string/itemContacto" />
            <item
                android:id="@+id/itemIdSalir"
                android:title="@string/itemSalir" />
        </menu>
    </item>
</menu>